--- a/Makefile.am
+++ b/Makefile.am
@@ -17,5 +17,19 @@ if ENABLE_DOC
 SUBDIRS += docs
 endif
 
+# Make rule for RPM on RHEL7
+rpm7: dist-gzip
+	mkdir -p $@/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
+	ln -f -s ../../automake rpm7/BUILD/automake
+	cp $(distdir).tar.gz $@/SOURCES
+	cp rpm/rhel7.spec $@/SPECS
+	QA_RPATHS=0x0003 ; \
+	export QA_RPATHS ; \
+	rpmbuild --define "_topdir `pwd`/$@" -ba $@/SPECS/rhel7.spec
+
+rpm-clean:
+	rm -rf rpm7/
+	rm -f $(distdir).tar.gz
+
 PEDIGREE = $(DESTDIR)/$(bindir)/baler-pedigree
 include $(top_srcdir)/../automake/pedigree.am
