--- a/dict/Makefile.am
+++ b/dict/Makefile.am
@@ -1,3 +1,5 @@
+EXTRA_DIST = eng-dictionary
+
 install-data-local:
 	$(MKDIR_P) $(DESTDIR)/$(prefix)/etc/ovis
 	$(INSTALL_DATA) $(srcdir)/eng-dictionary $(DESTDIR)/$(prefix)/etc/ovis
