--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -3,19 +3,15 @@ bin_PROGRAMS =
 AM_CFLAGS = -I$(top_srcdir)/src
 
 bmap_test_SOURCES = bmap_test.c
-bmap_test_LDADD = ../baler/libbaler.la ../baler/libbset.la \
-	       ../baler/libbmem.la \
-	       ../baler/libbmapper.la \
-	       ../baler/libbutils.la \
-	       -lpthread -ldl
+bmap_test_LDADD = ../baler/libbaler.la -lpthread -ldl
 bin_PROGRAMS += bmap_test
 
 bset_test_SOURCES = bset_test.c
-bset_test_LDADD = ../baler/libbset.la
+bset_test_LDADD = ../baler/libbaler.la
 bin_PROGRAMS += bset_test
 
 bstr_dist_u32_test_SOURCES = bstr_dist_u32_test.c
-bstr_dist_u32_test_LDADD = ../baler/libbutils.la
+bstr_dist_u32_test_LDADD = ../baler/libbaler.la
 bin_PROGRAMS += bstr_dist_u32_test
 
 bhash_test_SOURCES = bhash_test.c
