--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -20,17 +20,17 @@ lib_LTLIBRARIES += libbin_metric.la
 
 libbsos_msg_la_SOURCES = bsos_msg.c bsos_msg.h
 libbsos_msg_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
-libbsos_msg_la_LIBADD = -lsos ../baler/libbaler.la -lpthread @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
+libbsos_msg_la_LIBADD = -lsos -lods ../baler/libbaler.la -lpthread @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
 lib_LTLIBRARIES += libbsos_msg.la
 
 libbsos_img_la_SOURCES = bsos_img.c bsos_img.h
 libbsos_img_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
-libbsos_img_la_LIBADD = -lsos ../baler/libbaler.la -lpthread @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
+libbsos_img_la_LIBADD = -lsos -lods ../baler/libbaler.la -lpthread @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
 lib_LTLIBRARIES += libbsos_img.la
 
 libbout_sos_la_SOURCES = bout_sos.c bout_sos.h
 libbout_sos_la_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
-libbout_sos_la_LIBADD = -lsos ../baler/libbaler.la \
+libbout_sos_la_LIBADD = -lsos -lods ../baler/libbaler.la \
 			-lpthread \
 			@SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
 lib_LTLIBRARIES += libbout_sos.la
@@ -41,7 +41,7 @@ libbout_sos_img_la_LIBADD = ../baler/libbaler.la \
 			    libbout_sos.la \
 			    libbsos_img.la \
 			    -lpthread \
-			    -lsos @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
+			    -lsos -lods @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
 lib_LTLIBRARIES += libbout_sos_img.la
 
 libbout_sos_msg_la_SOURCES = bout_sos_msg.c bout_sos_msg.h
@@ -50,7 +50,7 @@ libbout_sos_msg_la_LIBADD = ../baler/libbaler.la \
 			    libbout_sos.la \
 			    libbsos_msg.la \
 			    -lpthread \
-			    -lsos @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
+			    -lsos -lods @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
 lib_LTLIBRARIES += libbout_sos_msg.la
 
 libbout_me_la_SOURCES = bout_me.c
@@ -68,5 +68,5 @@ lib_LTLIBRARIES += libbin_test.la
 bsos_part_modify_SOURCES = bsos_part_modify.c
 bsos_part_modify_CFLAGS = $(AM_CFLAGS) @SOS_INCDIR_FLAG@
 bsos_part_modify_LDADD = ../baler/libbaler.la \
-		     -lsos @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
+		     -lsos -lods @SOS_LIBDIR_FLAG@ @SOS_LIB64DIR_FLAG@
 bin_PROGRAMS += bsos_part_modify
