--- a/etc/init.d/Makefile.am
+++ b/etc/init.d/Makefile.am
@@ -1,8 +1,8 @@
 EXTRA_DIST = balerd
 
 install-data-local:
-	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/init.d
-	$(INSTALL_SCRIPT) $(builddir)/balerd $(DESTDIR)/$(sysconfdir)/init.d/
+	$(MKDIR_P) $(DESTDIR)$(sysconfdir)/init.d
+	$(INSTALL_SCRIPT) $(builddir)/balerd $(DESTDIR)$(sysconfdir)/init.d/
 
 uninstall-local:
-	rm -f $(DESTDIR)/$(sysconfdir)/init.d/balerd
+	rm -f $(DESTDIR)$(sysconfdir)/init.d/balerd
