--- a/src/bhttpd/Makefile.am
+++ b/src/bhttpd/Makefile.am
@@ -1,5 +1,6 @@
 lib_LTLIBRARIES =
 bin_PROGRAMS =
+sbin_PROGRAMS =
 
 AM_CFLAGS = -I$(srcdir)/../
 
@@ -15,4 +16,4 @@ bhttpd_LDADD = ../baler/libbaler.la \
 bhttpd_LDFLAGS = $(AM_LDFLAGS) @OVIS_LIB_LIBDIR_FLAG@ @OVIS_LIB_LIB64DIR_FLAG@ \
 		 @LIBEVENT_LIBDIR_FLAG@ @LIBEVENT_LIB64DIR_FLAG@
 bhttpd_CFLAGS = $(AM_CFLAGS) @OVIS_LIB_INCDIR_FLAG@ @LIBEVENT_INCDIR_FLAG@
-bin_PROGRAMS += bhttpd
+sbin_PROGRAMS += bhttpd
