--- a/python/test/config.yaml
+++ b/python/test/config.yaml
@@ -3,3 +3,4 @@ bhttpd:
     srv1: ["localhost:18001", "localhost:19001"]
     srv2: ["localhost:18002", "localhost:19002"]
     srv3: ["localhost:18003", "localhost:19003"]
+store: localstore
