--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -655,7 +655,7 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = @top_srcdir@/src @top_srcdir@/scripts
+INPUT                  = @top_srcdir@/src @top_srcdir@/python
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
