--- a/python/abhttp/Makefile.am
+++ b/python/abhttp/Makefile.am
@@ -1,5 +1,7 @@
 abhttpdir = $(pythondir)/abhttp
-abhttp_PYTHON = __init__.py abhttp.py bclient.py coll.py datatype.py net.py
+EXTRA_DIST = bclient.dox
+abhttp_PYTHON = __init__.py abhttp.py bclient.py coll.py datatype.py net.py \
+		ptn_order.py
 
 install-data-hook:
 	ln -sf $(abhttpdir)/bclient.py $(DESTDIR)$(bindir)/bclient
