--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@ examples/rsyslog_tcp/rsyslog_tcp_test
 swig/*.c
 swig/*.so
 *.pyc
+SHA.txt
+TAG.txt
+config.h.in
+config.h.in~
+config/
+configure.sh
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
